refactor api, fixed an issue where liking and adding a product to cart on the product view page would reset the filter
